--- a/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
+++ b/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
@@ -17,8 +17,13 @@
   &__content {
     padding: 10px;
     .image {
+      width: 100px;
+      height: 100px;
+      margin: 0 auto;
       img {
-        width: 100px;
+        max-width: 100px;
+        max-height: 100px;
+        object-fit: fill;
       }
     }
     .mealTitle {
