--- a/src/components/creator/Creator.scss
+++ b/src/components/creator/Creator.scss
@@ -52,6 +52,9 @@
               padding: 10px 20px;
               border-radius: 8px;
             }
+            .createPlanBtn {
+              background-color: $button-ok;
+            }
           }
         }
       }
