--- a/src/components/creator/creatorForms/createPlan/day/day.scss
+++ b/src/components/creator/creatorForms/createPlan/day/day.scss
@@ -10,10 +10,18 @@
     background-color: white;
     box-shadow: $box-shadow;
     border-radius: 8px;
+
+    .dayTitle {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+      border-bottom: 2px solid $orange-main;
+    }
     .dayName {
       color: $orange-main;
       font-size: 20px;
-      border-bottom: 2px solid $orange-main;
+
       text-transform: capitalize;
     }
     .meals {
